--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
 <body>
   <div class="overlay">
     <h1>Aulas de Música</h1>
-    <p class="subtitle">Canto, Contra-Baixo e Bateria para todos os níveis!</p>
+    <p class="subtitle">Canto, Contra-Baixo e Bateria!</p>
 
     <div class="cards">
       <div class="card" onclick="alert('Aulas de Canto: Técnicas para aprimorar sua voz, respiração e performance.')">
         <h2>Canto</h2>
         <p>Melhore sua afinação, respiração e presença de palco com técnicas profissionais.</p>
       </div>
-      <div class="card" onclick="alert('Aulas de Contra-Baixo: Groove, improvisação e leitura de cifras para você tocar com estilo.')">
+      <div class="card" onclick="alert('Aulas de Contra-Baixo: Groove, improvisação e leitura de cifras e partituras para você tocar com estilo.')">
         <h2>Contra-Baixo</h2>
-        <p>Aprenda groove, improvisação e leitura de cifras com aulas práticas e teóricas.</p>
+        <p>Aprenda groove, improvisação e leitura de cifras e partituras com aulas teóricas.</p>
       </div>
       <div class="card" onclick="alert('Aulas de Bateria: Domine ritmos, técnica e independência com exercícios guiados.')">
         <h2>Bateria</h2>
-        <p>Domine ritmos, técnicas de pedal duplo e independência com exercícios guiados.</p>
+        <p>Domine ritmos e independência com exercícios guiados.</p>
       </div>
     </div>
 
